--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -19,7 +19,7 @@ jobs:
                              # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
 
     env:
-      Solution: testActions.sln.sln                         # Replace with your solution name, i.e. MyWpfApp.sln.
+      Solution: testActions.sln                  # Replace with your solution name, i.e. MyWpfApp.sln.
       PACKAGE_PATH: 'published'                 # Replace with the path to your test project, i.e. MyWpfApp.Tests\MyWpfApp.Tests.csproj.
 
     steps:
