--- a/.github/workflows/dotnetTest.yml
+++ b/.github/workflows/dotnetTest.yml
@@ -46,10 +46,10 @@ jobs:
       run: nuget restore ${{ env.Solution }}
 
     - name: Build
-      run: msbuild ${{ env.Solution }} /p:Configuration=Release
+      run: dotnet build ${{ env.Solution }} --configuration Release
 
     - name: Publish to folder
-      run: msbuild ${{ env.Solution }} /p:Configuration=Release /p:DeployOnBuild=true /t:WebPublish /p:WebPublishMethod=FileSystem /p:publishUrl=${{ env.PACKAGE_PATH }} /p:PackageAsSingleFile=false
+      run: dotnet publish ${{ env.Solution }} --configuration Release --output ${{ env.PACKAGE_PATH }}
 
     - name: Create NuGet package
       run: dotnet pack --configuration Release --output ${{ env.PACKAGE_PATH }}
