--- a/.github/workflows/dotnetTest.yml
+++ b/.github/workflows/dotnetTest.yml
@@ -1,4 +1,3 @@
-
 name: .NET Pipeline
 
 on:
@@ -19,9 +18,8 @@ jobs:
                              # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
 
     env:
-      Solution: testActions.sln                   # Replace with your solution name, i.e. MyWpfApp.sln.
-      PACKAGE_PATH: 'published'                   # Replace with the path to your test project, i.e. MyWpfApp.Tests\MyWpfApp.Tests.csproj.
-
+      Solution: testActions.sln                  # Replace with your solution name, i.e. MyWpfApp.sln.
+      PACKAGE_PATH: 'published'                 # Replace with the path to your test project, i.e. MyWpfApp.Tests\MyWpfApp.Tests.csproj.
 
     steps:
     - name: Checkout
@@ -31,23 +29,25 @@ jobs:
 
     # Install the .NET Core workload
     - name: Setup .NET Framework
-      uses: actions/setup-dotnet@v1
+      uses: microsoft/setup-msbuild@v1
       with:
-        dotnet-version: '5.0.x'
-        include-prerelease: true
+        msbuild-version: '16.0'
 
     # Add  MSBuild to the PATH: https://github.com/microsoft/setup-msbuild
+    - name: Setup MSBuild.exe
+      uses: microsoft/setup-msbuild@v1.0.2
+
+    - name: Setup NuGet
+      uses: NuGet/setup-nuget@v1.0.5
+    
     - name: Restore NuGet packages
-      run: dotnet restore ${{ env.Solution }} --framework net48
+      run: nuget restore ${{ env.Solution }}
 
     - name: Build
-      run: dotnet build ${{ env.Solution }} --configuration Release --framework net48
+      run: msbuild ${{ env.Solution }} /p:Configuration=Release
 
     - name: Publish to folder
-      run: dotnet publish ${{ env.Solution }} --configuration Release --framework net48 --output ${{ env.PACKAGE_PATH }}
-
-    - name: Create NuGet package
-      run: dotnet pack ${{ env.Solution }} --configuration Release --framework net48 --output ${{ env.PACKAGE_PATH }}
+      run: msbuild ${{ env.Solution }} /p:Configuration=Release /p:DeployOnBuild=true /t:WebPublish /p:WebPublishMethod=FileSystem /p:publishUrl=${{ env.PACKAGE_PATH }} /p:PackageAsSingleFile=false
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v2
@@ -81,5 +81,3 @@ jobs:
       uses: github/codeql-action/analyze@v2
       with:
         category: "/language:${{matrix.language}}"
-
-
