--- a/.github/workflows/dotnetTest.yml
+++ b/.github/workflows/dotnetTest.yml
@@ -58,6 +58,7 @@ jobs:
   analyze:
     name: Analyze
     runs-on: ubuntu-latest
+    needs: build
     permissions:
       actions: read
       contents: read
