--- a/.github/workflows/dotnetTest.yml
+++ b/.github/workflows/dotnetTest.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
 
-  build:
+  Build:
 
     strategy:
       matrix:
@@ -46,6 +46,12 @@ jobs:
     - name: Build
       run: msbuild ${{ env.Solution }} /p:Configuration=Release
 
+  release-project:
+
+    name: Release project
+    runs-on: ubuntu-latest
+    needs: Build
+    steps:
     - name: Publish to folder
       run: msbuild ${{ env.Solution }} /p:Configuration=Release /p:DeployOnBuild=true /t:WebPublish /p:WebPublishMethod=FileSystem /p:publishUrl=${{ env.PACKAGE_PATH }} /p:PackageAsSingleFile=false
 
@@ -58,7 +64,7 @@ jobs:
   analyze:
     name: Analyze
     runs-on: ubuntu-latest
-    needs: build
+    needs: [Build, Release project]
     permissions:
       actions: read
       contents: read
