--- a/.github/workflows/dotnetTest.yml
+++ b/.github/workflows/dotnetTest.yml
@@ -46,7 +46,7 @@ jobs:
     - name: Build
       run: msbuild ${{ env.Solution }} /p:Configuration=Release
 
-  release-project:
+  release:
 
     name: Release project
     runs-on: ubuntu-latest
@@ -64,7 +64,7 @@ jobs:
   analyze:
     name: Analyze
     runs-on: ubuntu-latest
-    needs: [Build, Release project]
+    needs: [Build]
     permissions:
       actions: read
       contents: read
