--- a/.github/workflows/dotnetTest.yml
+++ b/.github/workflows/dotnetTest.yml
@@ -48,7 +48,7 @@ jobs:
 
   release:
 
-    name: Release project
+    name: Release_project
     runs-on: ubuntu-latest
     needs: Build
     steps:
@@ -64,7 +64,7 @@ jobs:
   analyze:
     name: Analyze
     runs-on: ubuntu-latest
-    needs: [Build]
+    needs: [Build, Release]
     permissions:
       actions: read
       contents: read
