--- a/.github/workflows/dotnetTest.yml
+++ b/.github/workflows/dotnetTest.yml
@@ -48,13 +48,10 @@ jobs:
 
   release:
 
-    name: Release_project
+    name: Release 
     runs-on: ubuntu-latest
     needs: Build
     steps:
-    - name: Publish to folder
-      run: msbuild ${{ env.Solution }} /p:Configuration=Release /p:DeployOnBuild=true /t:WebPublish /p:WebPublishMethod=FileSystem /p:publishUrl=${{ env.PACKAGE_PATH }} /p:PackageAsSingleFile=false
-
     - name: Upload Artifacts
       uses: actions/upload-artifact@v2
       with:
