--- a/.github/workflows/dotnetTest.yml
+++ b/.github/workflows/dotnetTest.yml
@@ -6,7 +6,12 @@ on:
   pull_request:
     branches: [ "master" ]
 
+env:
+  Solution: testActions.sln                  # Replace with your solution name, i.e. MyWpfApp.sln.
+  PACKAGE_PATH: 'published' 
+
 jobs:
+
 
   Build:
 
@@ -17,9 +22,7 @@ jobs:
     runs-on: windows-latest  # For a list of available runner types, refer to
                              # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
 
-    env:
-      Solution: testActions.sln                  # Replace with your solution name, i.e. MyWpfApp.sln.
-      PACKAGE_PATH: 'published'                 # Replace with the path to your test project, i.e. MyWpfApp.Tests\MyWpfApp.Tests.csproj.
+                # Replace with the path to your test project, i.e. MyWpfApp.Tests\MyWpfApp.Tests.csproj.
 
     steps:
     - name: Checkout
@@ -51,7 +54,11 @@ jobs:
     name: Release 
     runs-on: ubuntu-latest
     needs: Build
+
     steps:
+    - name: Publish to folder
+      run: msbuild ${{ env.Solution }} /p:Configuration=Release /p:DeployOnBuild=true /t:WebPublish /p:WebPublishMethod=FileSystem /p:publishUrl=${{ env.PACKAGE_PATH }} /p:PackageAsSingleFile=false
+    
     - name: Upload Artifacts
       uses: actions/upload-artifact@v2
       with:
