--- a/.github/workflows/dotnetTest.yml
+++ b/.github/workflows/dotnetTest.yml
@@ -14,16 +14,7 @@ jobs:
 
 
   Build:
-
-    strategy:
-      matrix:
-        configuration: [Release]
-
-    runs-on: windows-latest  # For a list of available runner types, refer to
-                             # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
-
-                # Replace with the path to your test project, i.e. MyWpfApp.Tests\MyWpfApp.Tests.csproj.
-
+    runs-on: windows-latest  
     steps:
     - name: Checkout
       uses: actions/checkout@v3
@@ -31,6 +22,8 @@ jobs:
         fetch-depth: 0
 
     # Install the .NET Core workload
+
+
     - name: Setup .NET Framework
       uses: microsoft/setup-msbuild@v1
       with:
@@ -48,6 +41,11 @@ jobs:
 
     - name: Build
       run: msbuild ${{ env.Solution }} /p:Configuration=Release
+
+    - name: List directory contents
+      run: |
+        ls -al
+        dir
 
   release:
 
