--- a/.github/workflows/dotnetTest.yml
+++ b/.github/workflows/dotnetTest.yml
@@ -54,7 +54,7 @@ jobs:
   analyze:
     name: Analyze
     runs-on: ubuntu-latest
-    needs: [Build, Release]
+    needs: [Build]
     permissions:
       actions: read
       contents: read
