--- a/.github/workflows/dotnetTest.yml
+++ b/.github/workflows/dotnetTest.yml
@@ -51,10 +51,25 @@ jobs:
         name: MyArtifacts
         path: ${{ env.PACKAGE_PATH }}
 
+  Release:
+    name: Release
+    runs-on: windows-latest  
+    needs: [Build]
+    steps:
+      - name: Create actions release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        with:
+          tag_name: ${{ github.run_numbver }}
+          release_name: Release ${{ github.run_numbver }}
+
+
+
   analyze:
     name: Analyze
     runs-on: ubuntu-latest
-    needs: [Build]
+    needs: [Build, Release]
     permissions:
       actions: read
       contents: read
