--- a/.github/workflows/dotnetTest.yml
+++ b/.github/workflows/dotnetTest.yml
@@ -57,13 +57,22 @@ jobs:
     needs: [Build]
     steps:
       - name: Create actions release
-        uses: actions/create-release@v1
+        uses: actions/create-release@v1.2.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          tag_name: ${{ github.run_number }}
-          release_name: Release ${{ github.run_number }}
-
+          tag_name: v0.1.0
+          release_name: Release v0.1.0
+          body: |
+            This is the my first release!!
+          draft: false
+          prerelease: false
+        permissions:
+          contents: write
+          packages: write
+          pull-requests: write
+          issues: write
+          deployments: write
 
 
   analyze:
