--- a/.github/workflows/dotnetTest.yml
+++ b/.github/workflows/dotnetTest.yml
@@ -72,7 +72,11 @@ jobs:
     name: Analyze
     runs-on: ubuntu-latest
     needs: [Build, Release]
-
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+      
     strategy:
       fail-fast: false
       matrix:
