--- a/.github/workflows/dotnetTest.yml
+++ b/.github/workflows/dotnetTest.yml
@@ -70,8 +70,16 @@ jobs:
         with:
           name: MyArtifacts
           path: ${{ env.PACKAGE_PATH }}
-
-
+      - name: Upload Release Asset
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ${{ env.PACKAGE_PATH }}/my-artifact.zip
+          asset_name: my-artifact.zip
+          asset_content_type: application/zip
 
   analyze:
     name: Analyze
