--- a/.github/workflows/dotnetTest.yml
+++ b/.github/workflows/dotnetTest.yml
@@ -60,26 +60,17 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          tag_name: v0.1.4
-          release_name: Release v0.1.4
+          tag_name: v0.1.5
+          release_name: Release v0.1.5
           body: |
-            This is the my first release!!
+            This is the my release!!
           draft: false
           prerelease: false
       - uses: actions/upload-artifact@v3
         with:
           name: MyArtifacts
           path: ${{ env.PACKAGE_PATH }}
-      - name: Upload Release Asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ${{ env.PACKAGE_PATH }}/my-artifact.zip
-          asset_name: my-artifact.zip
-          asset_content_type: application/zip
+
 
   analyze:
     name: Analyze
