--- a/.github/workflows/dotnetTest.yml
+++ b/.github/workflows/dotnetTest.yml
@@ -73,4 +73,6 @@ jobs:
 
 
   analyze:
-    uses: yomins/workflow-templates/blob/main/.github/workflows/analyse.yml
+    uses: yomins/workflow-templates/blob/main/.github/workflows/analyse.yml@main
+    with:
+      language: javascript
