--- a/.github/workflows/dotnetTest.yml
+++ b/.github/workflows/dotnetTest.yml
@@ -9,8 +9,6 @@ on:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
-  workflow_dispatch:
-    
 
 jobs:
 
@@ -75,8 +73,24 @@ jobs:
 
 
   analyze:
-    uses: yomins/workflow-templates/.github/workflows/analyse.yml@main
-    with:
-      language: javascript
+    name: Analyze
+    runs-on: ubuntu-latest
+    needs: [Build, Release]
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
 
-    
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Initialize CodeQL
+      uses: github/codeql-action/init@v2
+      with:
+        languages: javascript
+
+    - name: Perform CodeQL Analysis
+      uses: github/codeql-action/analyze@v2
+      with:
+        category: "/language:javascript"
