--- a/.github/workflows/dotnetTest.yml
+++ b/.github/workflows/dotnetTest.yml
@@ -49,6 +49,10 @@ jobs:
         name: MyArtifacts
         path: ${{ env.PACKAGE_PATH }}
 
+    - uses: thedoctor0/zip-release@0.7.1
+      with:
+        filename: site.zip
+
   Release:
     permissions: write-all
     name: Release
@@ -56,24 +60,33 @@ jobs:
     needs: [Build]
     steps:
       - name: Create actions release
+        id: create-release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          tag_name: v0.1.6
-          release_name: Release v0.1.6
+          tag_name: v0.1.7
+          release_name: Release v0.1.7
           body: |
             This is the my release!!
           draft: false
           prerelease: false
-      - uses: actions/upload-artifact@v3
+    # - uses: actions/upload-artifact@v3
+    #   with:
+    #     name: MyArtifacts
+    #     path: ${{ env.PACKAGE_PATH }}
+      - name: Upload Release 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          name: MyArtifacts
-          path: ${{ env.PACKAGE_PATH }}
+          upload_url: ${{ steps.create-release.outputs.upload_url }}
+          asset_path: ./site.zip
+          asset_name: site.zip
+          asset_content_type: application/zip
+  
 
-      - uses: thedoctor0/zip-release@0.7.1
-        with:
-          filename: site.zip
+
 
 
   analyze:
