--- a/.github/workflows/dotnetTest.yml
+++ b/.github/workflows/dotnetTest.yml
@@ -51,33 +51,22 @@ jobs:
 
   analyze:
     name: Analyze
-    runs-on: windows-latest 
+    runs-on: ubuntu-latest
     needs: [Build]
     permissions:
       actions: read
       contents: read
       security-events: write
 
+
     strategy:
       fail-fast: false
       matrix:
-        language: [ 'javascript' , 'C#']
+        language: [ 'javascript' , 'csharp']
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
-
-    - name: Setup MSBuild.exe
-      uses: microsoft/setup-msbuild@v1.0.2
-
-    - name: Setup NuGet
-      uses: NuGet/setup-nuget@v1.0.5
-    
-    - name: Restore NuGet packages
-      run: nuget restore ${{ env.Solution }}
-
-    - name: Build
-      run: msbuild ${{ env.Solution }} /p:Configuration=Release
 
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v2
@@ -111,5 +100,3 @@ jobs:
         with:
           name: MyArtifacts
           path: ${{ env.PACKAGE_PATH }}
-
-
