--- a/.github/workflows/dotnetTest.yml
+++ b/.github/workflows/dotnetTest.yml
@@ -68,6 +68,18 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
+    - name: Setup MSBuild.exe
+      uses: microsoft/setup-msbuild@v1.0.2
+
+    - name: Setup NuGet
+      uses: NuGet/setup-nuget@v1.0.5
+    
+    - name: Restore NuGet packages
+      run: nuget restore ${{ env.Solution }}
+
+    - name: Build
+      run: msbuild ${{ env.Solution }} /p:Configuration=Release
+
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v2
       with:
