--- a/.github/workflows/dotnetTest.yml
+++ b/.github/workflows/dotnetTest.yml
@@ -38,9 +38,7 @@ jobs:
       run: nuget restore ${{ env.Solution }}
 
     - name: Build
-      run: |
-        dotnet build /p:UseSharedCompilation=false
-        msbuild ${{ env.Solution }} /p:Configuration=Release
+      run: msbuild ${{ env.Solution }} /p:Configuration=Release
 
     - name: Publish to folder
       run: msbuild ${{ env.Solution }} /p:Configuration=Release /p:DeployOnBuild=true /t:WebPublish /p:WebPublishMethod=FileSystem /p:publishUrl=${{ env.PACKAGE_PATH }} /p:PackageAsSingleFile=false
@@ -67,17 +65,31 @@ jobs:
         language: [ 'javascript' , 'csharp']
 
     steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Setup MSBuild.exe
+      uses: microsoft/setup-msbuild@v1.0.2
+
+    - name: Setup NuGet
+      uses: NuGet/setup-nuget@v1.0.5
+    
+    - name: Restore NuGet packages
+      run: nuget restore ${{ env.Solution }}
+
+    - name: Build
+      run: msbuild ${{ env.Solution }} /p:Configuration=Release
 
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v2
       with:
+        debug: true
         languages: ${{ matrix.language }}
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
       with:
-        category: "/language:javascript, /language:csharp"
-
+        category: "/language:${{matrix.language}}"
 
 
   Release:
