--- a/.github/workflows/dotnetTest.yml
+++ b/.github/workflows/dotnetTest.yml
@@ -49,37 +49,10 @@ jobs:
         name: MyArtifacts
         path: ${{ env.PACKAGE_PATH }}
 
-  analyze:
-    name: Analyze
-    runs-on: windows-latest
+  analyze-reusable:
+    name: Analyze (reusable workflow)
+    uses: yomins/workflow-templates/.github/workflows/analyze.yml@main
     needs: [Build]
-    permissions:
-      actions: read
-      contents: read
-      security-events: write
-
-    strategy:
-      fail-fast: false
-      matrix:
-        language: [ 'javascript' , 'csharp']
-
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
-
-    # Initializes the CodeQL tools for scanning.
-    - name: Initialize CodeQL
-      uses: github/codeql-action/init@v2
-      with:
-        languages: ${{ matrix.language }}
-
-    - name: Autobuild
-      uses: github/codeql-action/autobuild@v2
-
-    - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v2
-      with:
-        category: "/language:${{matrix.language}}"
 
 
   Release:
