--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   analyze-code:
+    runs-on: windows-latest
     name: Analyze Code
     uses: yomins/workflow-templates/.github/workflows/analyse.yml@main
     with:
