--- a/.github/workflows/dotnetTest.yml
+++ b/.github/workflows/dotnetTest.yml
@@ -52,7 +52,8 @@ jobs:
     - name: Analyze code
       uses: yomins/workflow-templates/.github/workflows/analyse.yml@main
       with:
-        languages: "[ 'javascript']"
+        languages: "['javascript', 'chsarp']"
+
 
 
   Release:
