--- a/.github/workflows/dotnetTest.yml
+++ b/.github/workflows/dotnetTest.yml
@@ -16,7 +16,7 @@ jobs:
     name: Analyze Code
     uses: yomins/workflow-templates/.github/workflows/analyse.yml@main
     with:
-      languages: "['javascript', 'chsarp']"
+      languages: "['javascript', 'csharp']"
 
   Build:
     runs-on: windows-latest  
@@ -26,7 +26,7 @@ jobs:
       with:
         fetch-depth: 0
 
-    # Install the .NET Core workload
+    # Install the .NET Core workload.
 
     - name: Setup .NET Framework
       uses: microsoft/setup-msbuild@v1
