--- a/.github/workflows/dotnetTest.yml
+++ b/.github/workflows/dotnetTest.yml
@@ -26,7 +26,7 @@ jobs:
       with:
         fetch-depth: 0
 
-    # Install the .NET Core workload.
+    # Install the .NET Core workload,
 
     - name: Setup .NET Framework
       uses: microsoft/setup-msbuild@v1
