--- a/.github/workflows/dotnetTest.yml
+++ b/.github/workflows/dotnetTest.yml
@@ -64,7 +64,7 @@ jobs:
       - name: Create actions release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token,
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token, is provided by Actions, you do not need to create your own token,
         with:
           tag_name: v0.2.0
           release_name: Release v0.2.0
